<resources>
<string name="app_name">khim1306_a3_2</string>
<string name="hello_message">Hello World!</string>
<string name="ButtonText">I\'m a button</string>
<string name="login_text">login</string>
<string name="login_hint">login name</string>
<string name="password_text">password</string>
<string name="radio_button_text">RadioButton</string>
<string name="switch_text">What does this do?</string>
<string name="image_button_description">Camera Button</string>
<string name="checkbox_text">CheckBox</string>
<string name="ok_button">Yes</string>
<string name="cancel_button">No</string>
<string name="dialog_title">Finish Activity</string>
<string name="dialog_message">Do you want to finish the activity?</string>
<string name="chatButton">Start Chat</string>
<string name="sendButtonText">Send</string>
<string name="outgoing_call">Outgoing Call</string>
<string name="incoming_call">Incoming Call</string>
<string name="action_one">One</string>
<string name="action_two">Two</string>
<string name="action_three">Three</string>
<string name="test_toolbar">Test Toolbar</string>
<string name="about_menu">About</string>
<string name="about_toast_text">Version 1.0, by Aamir Khimani</string>
<string name="mail_button_message">Mail Button Click</string>
<string name="action_one_message">You selected item 1</string>
<string name="action_two_message">Do you want to go back?</string>
<string name="action_two_dialog_title">Do you want to update Text?</string>
<string name="title_activity_test_toolbar">Test Toolbar</string>
<string name="mail_icon_description">Mail Icon</string>
</resources>